@@ -1,9 +1,12 @@
 package arraysort.todolist.service;
 
 
+import arraysort.todolist.common.component.ImageComponent;
 import arraysort.todolist.domain.ImageDto;
+import arraysort.todolist.domain.SignupDto;
 import arraysort.todolist.mapper.ImageMapper;
 import lombok.RequiredArgsConstructor;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -14,18 +17,24 @@ public class ImageService {
 
     private final ImageMapper imageMapper;
 
+    private final ImageComponent imageComponent;
+
     @Value("${file.default-image}")
     private String defaultImage;
 
     @Transactional
-    public void addImage(ImageDto imageDto) {
-        imageMapper.insertImage(imageDto);
+    public void addImage(SignupDto signupDto) {
+        ImageDto image = imageComponent.uploadImage(signupDto.getUserId(), signupDto.getImageFile());
+
+        if (image != null) {
+            imageMapper.insertImage(image);
+        }
     }
 
     @Transactional(readOnly = true)
     public String findImageByUserId(String userId) {
         String savedName = imageMapper.findSavedImageNameByUserId(userId);
 
-        return (savedName == null || savedName.isBlank()) ? defaultImage : savedName;
+        return StringUtils.isBlank(savedName) ? defaultImage : savedName;
     }
 }
